# sdl-test-app

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake  ios.toolchain.cmake  utils.cmake
cmake/ios/: Info.plist
iOS/: Info.plist  LaunchScreen.storyboard
scripts/: run-cmake-format.py
src/: CMakeLists.txt  OGLWindow.cpp  OGLWindow.hpp  main.cpp
